--- a/internal/static/templates/navbar.html
+++ b/internal/static/templates/navbar.html
@@ -1,6 +1,6 @@
 
 
-<a href="/">Main Page</a>
+<a href="/">News</a>
 <a href="/bloggers">Bloggers</a>
 <a href="/profile">Profile</a>
 <a href="/insert">Create article</a>
