--- a/internal/static/templates/bloggerProfile.html
+++ b/internal/static/templates/bloggerProfile.html
@@ -9,15 +9,27 @@
     <button type="submit">Subscribe</button>
 </form>
 
-{{if eq (len .Articles) 0}}
-    No articles. Blogger is modest...
-{{end}}
-{{range .Articles}}
-    <h3>{{.Title}}</h3>
+<p style="margin-left:20px;">Liked:</p>
+{{range .ArticlesLiked}}
+    <a href="/bloggers/{{ .BloggerId }}/{{ .ArticleId }}/liked">
+        <h3>{{.Title}}</h3>
+    </a>
     <div>
         {{.ArticleMessage}}
     </div>
     <p>{{.Date}}</p>
 {{end}}
+
+<p style="margin-left:20px;">Not liked:</p>
+{{range .ArticlesNotLiked}}
+    <a href="/bloggers/{{ .BloggerId }}/{{ .ArticleId }}">
+        <h3>{{.Title}}</h3>
+    </a>
+    <div>
+        {{.ArticleMessage}}
+    </div>
+<p>{{.Date}}</p>
+{{end}}
+
 
 {{template "footer.html" .}}
