--- a/internal/static/templates/header.html
+++ b/internal/static/templates/header.html
@@ -2,9 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-
     <title>.PageTitle</title>
+    <link rel="stylesheet" href="internal/static/css/style.css">
+
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background: #888;
+            margin: 0 auto; width: 40%;
+            margin-top: 70px;
+        }
+        * {
+            box-sizing: border-box;
+        }
+
+        .container {
+            padding: 16px;
+            background-color: white;
+        }
+
+        input {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            border: none;
+            background: #f1f1f1;
+        }
+
+        button {
+            background-color: #0039a6;
+            color: white;
+            padding: 16px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            opacity: 1;
+        }
+
+        .center {
+            text-align: center;
+        }
+
+        .backgrey {
+            background-color: #f1f1f1;
+        }
+
+        a {
+            color: dodgerblue;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+        }
+
+    </style>
+
 </head>
 <body>
-
