--- a/internal/static/templates/bloggerArticleLiked.html
+++ b/internal/static/templates/bloggerArticleLiked.html
@@ -1,16 +1,18 @@
 {{template "header.html" .}}
 {{template "navbar.html" .}}
 
-<h3>{{.Article.Title}}</h3>
-<div>
-    {{.Article.ArticleMessage}}
+<div class="container">
+    <h3>{{.Article.Title}}</h3>
+    <div>
+        {{.Article.ArticleMessage}}
+    </div>
+    <p>{{.Article.Date}}</p>
+
+    <p>Liked {{.LikesCnt}} people</p>
+
+    <form method="post">
+        <button type="submit">Cancel like</button>
+    </form>
 </div>
-<p>{{.Article.Date}}</p>
-
-<p>Likes {{.LikesCnt}} people</p>
-
-<form method="post">
-    <button type="submit">Cancel like</button>
-</form>
 
 {{template "footer.html" .}}
