--- a/internal/static/templates/insertArticle.html
+++ b/internal/static/templates/insertArticle.html
@@ -1,11 +1,14 @@
 {{template "header.html" .}}
 {{template "navbar.html" .}}
 
-<form method="post">
-    Title <input type="text" name="title" value="Sport"> <br>
-    ArticleMessage <input type="text" name="articleMessage" value="Sport is good for health"> <br>
-    Date <input type="text" name="date" value="2023-09-06:22:59"> <br>
-    <button type="submit">Add post</button>
-</form>
+<div class="container">
+    <h1>Create article</h1>
+    <form method="post">
+        Title <input type="text" name="title" value="Sport"> <br>
+        ArticleMessage <input type="text" name="articleMessage" value="Sport is good for health"> <br>
+        Date <input type="text" name="date" value="2023-09-06:22:59"> <br>
+        <button type="submit">Add post</button>
+    </form>
+</div>
 
 {{template "footer.html" .}}
