--- a/internal/static/templates/login.html
+++ b/internal/static/templates/login.html
@@ -1,13 +1,21 @@
 {{template "header.html" .}}
 
-<form method="post">
-    Email <input type="text" name="email" value="zlatoivan@gmail.com"> <br>
-    Password <input type="text" name="password" value="123"> <br><br>
-    <button type="submit">Log In</button>
-</form>
+<div class="container">
+    <h1>Login</h1>
+    <p>Please fill in this form to login.</p>
+    <hr>
 
-<br><br>
+    <form method="post">
+        Email <input type="text" name="email" value="zlatoivan@gmail.com"> <br>
+        Password <input type="text" name="password" value="123"> <br><br>
+        <hr>
+        <button type="submit">Log In</button>
+    </form>
+</div>
 
-<a href="/register">Register</a>
+<div class="container center backgrey">
+    <p>Don't have an account? <a href="/register">Register</a></p>
+</div>
+
 
 {{template "footer.html" .}}
