--- a/internal/static/templates/navbar.html
+++ b/internal/static/templates/navbar.html
@@ -1,9 +1,11 @@
 
 
-<a href="/">News</a>
-<a href="/bloggers">Bloggers</a>
-<a href="/profile">Profile</a>
-<a href="/insert">Create article</a>
-<a href="/logout">Log out</a>
-<br><br>
+<div class="container navbar">
+    <a href="/">News</a>
+    <a href="/bloggers">Bloggers</a>
+    <a href="/insert">Create article</a>
+    <a href="/profile">Profile</a>
+    <a href="/logout">Log out</a>
+</div>
+<br>
 
