Likes and a lot of JavaScript added. Routes reduced

--- a/internal/static/templates/bloggers.html
+++ b/internal/static/templates/bloggers.html
@@ -6,7 +6,7 @@
 
     <h3>Subscriptions</h3>
     {{range .BloggersSub}}
-    <a href="/bloggers/{{ .BloggerId }}/subscribed">
+    <a href="/bloggers/{{ .BloggerId }}">
         <p>{{ .Login }} ({{ .Name }} {{ .Surname }}, {{ .Country }})</p>
     </a>
     {{end}}
