--- a/internal/static/templates/login.html
+++ b/internal/static/templates/login.html
@@ -6,8 +6,8 @@
     <hr>
 
     <form method="post">
-        Email <input type="text" name="email" value="zlatoivan@gmail.com"> <br>
-        Password <input type="text" name="password" value="123"> <br><br>
+        Email <input type="text" name="email" placeholder="example@gmail.com"> <br>
+        Password <input type="text" name="password" placeholder="***"> <br><br>
         <hr>
         <button type="submit">Log In</button>
     </form>
