--- a/internal/static/templates/insertArticle.html
+++ b/internal/static/templates/insertArticle.html
@@ -4,10 +4,9 @@
 <div class="container">
     <h1>Create article</h1>
     <form method="post">
-        Title <input type="text" name="title" value="Sport"> <br>
-        ArticleMessage <input type="text" name="articleMessage" value="Sport is good for health"> <br>
-        Date <input type="text" name="date" value="2023-09-06:22:59"> <br>
-        <button type="submit">Add post</button>
+        Title <input type="text" name="title" placeholder="Title"> <br>
+        ArticleMessage <textarea name="articleMessage" rows="10" placeholder="Message"></textarea><br>
+        <button type="submit">Add article</button>
     </form>
 </div>
 
