--- a/internal/static/templates/register.html
+++ b/internal/static/templates/register.html
@@ -6,13 +6,13 @@
     <hr>
 
     <form method="post">
-        Email <input type="text" name="email" value="zlatoivan@gmail.com"> <br>
-        Password <input type="text" name="password" value="123"> <br><br>
+        Email <input type="text" name="email" placeholder="example@gmail.com"> <br>
+        Password <input type="text" name="password" placeholder="***"> <br><br>
 
-        Login <input type="text" name="login" value=""> <br>
-        Name <input type="text" name="name" value=""> <br>
-        Surname <input type="text" name="surname" value=""> <br>
-        Country <input type="text" name="country" value="Russia"> <br>
+        Login <input type="text" name="login" placeholder="Mr.Clean"> <br>
+        Name <input type="text" name="name" placeholder="Ivan"> <br>
+        Surname <input type="text" name="surname" placeholder="Ivanov"> <br>
+        Country <input type="text" name="country" placeholder="Russia"> <br>
         <hr>
         <button type="submit">Register</button>
     </form>
