--- a/internal/static/templates/insertArticle.html
+++ b/internal/static/templates/insertArticle.html
@@ -2,10 +2,10 @@
 {{template "navbar.html" .}}
 
 <div class="container">
-    <h1>Create article</h1>
+    <h1>Write an article</h1>
     <form method="post">
         Title <input type="text" name="title" placeholder="Title"> <br>
-        ArticleMessage <textarea name="articleMessage" rows="10" placeholder="Message"></textarea><br>
+        Article message <textarea name="articleMessage" rows="10" placeholder="Message"></textarea><br>
         <button type="submit">Add article</button>
     </form>
 </div>
