--- a/internal/static/templates/profile.html
+++ b/internal/static/templates/profile.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h3><a href="/bloggers/{{ .BloggerId }}/{{ .ArticleId }}">{{.Title}}</a></h3>
         <p>{{.ArticleMessage}}</p>
-        <p>{{.Date}}</p>
+        <p class="datetime">{{.Date}}</p>
     </div>
     <br>
 {{end}}
