--- a/internal/static/templates/register.html
+++ b/internal/static/templates/register.html
@@ -16,10 +16,8 @@
         <hr>
         <button type="submit">Register</button>
     </form>
-</div>
-
-<div class="container center backgrey">
-    <p>Already have an account? <a href="/login">Login</a></p>
+    <br>
+    <p class="center">Already have an account? <a href="/login">Login</a></p>
 </div>
 
 {{template "footer.html" .}}
