--- a/internal/static/templates/login.html
+++ b/internal/static/templates/login.html
@@ -11,11 +11,8 @@
         <hr>
         <button type="submit">Log In</button>
     </form>
+    <br>
+    <p class="center">Don't have an account? <a href="/register">Register</a></p>
 </div>
-
-<div class="container center backgrey">
-    <p>Don't have an account? <a href="/register">Register</a></p>
-</div>
-
 
 {{template "footer.html" .}}
