--- a/internal/static/templates/navbar.html
+++ b/internal/static/templates/navbar.html
@@ -3,7 +3,7 @@
 <div class="container navbar">
     <a href="/">News</a>
     <a href="/bloggers">Bloggers</a>
-    <a href="/insert">Create article</a>
+    <a href="/insert">Write an article</a>
     <a href="/profile">Profile</a>
     <a href="/logout">Log out</a>
 </div>
