--- a/internal/static/templates/subsArticles.html
+++ b/internal/static/templates/subsArticles.html
@@ -1,7 +1,10 @@
 {{template "header.html" .}}
 {{template "navbar.html" .}}
 
-<h1>News</h1>
+<div class="container">
+    <h1>News</h1>
+</div>
+<br>
 
 {{if eq (len .) 0}}
     No articles. Subscribe on bloggers!
