--- a/internal/static/templates/bloggerProfile.html
+++ b/internal/static/templates/bloggerProfile.html
@@ -147,16 +147,13 @@
 
 
 <style>
-
-    .datetime {
-        color: grey;
-    }
     body {
         font-family: Arial, Helvetica, sans-serif;
         background: #edeef0;
         margin: 0 auto; width: 40%;
-        margin-top: 70px;
+        margin-top: 40px;
     }
+
     * {
         box-sizing: border-box;
     }
@@ -191,17 +188,14 @@
         text-align: center;
     }
 
-    .backgrey {
-        background-color: #f1f1f1;
-    }
-
     a {
         color: dodgerblue;
     }
 
     .navbar {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        /*justify-content: space-between;*/
     }
 
     .like-button svg path {
@@ -210,5 +204,9 @@
     }
     .like-button.active svg path {
         fill: #2196f3;
+    }
+
+    .datetime {
+        color: grey;
     }
 </style>
