--- a/internal/static/templates/insertArticle.html
+++ b/internal/static/templates/insertArticle.html
@@ -6,7 +6,7 @@
     <form method="post">
         Title <input type="text" name="title" placeholder="Title"> <br>
         Article message <textarea name="articleMessage" rows="10" placeholder="Message"></textarea><br>
-        <button type="submit">Add article</button>
+        <button type="submit">Add an article</button>
     </form>
 </div>
 
